--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     border: none;
     outline: none;
     padding: 6px 12px;
+    margin: 0px 5px;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
@@ -11,11 +12,13 @@
     background-color: #ffffff;
     background-clip: padding-box;
     /* appearance: none; */
+
 }
 
 /* display input boxes */
 .displayInputBoxes_true {
     padding: 6px 12px;
+    margin: 0px 5px;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
